# cloakcat-c2-framwork

./: .cursorrules  .env  .gitignore  CLAUDE.md  Cargo.toml  README.md  compose.yaml
.cargo/: config.toml
.claude/: settings.local.json
cat-agent/: Cargo.toml  build.rs
cat-agent/src/: beacon.rs  config.rs  exec.rs  host.rs  lib.rs  main.rs  transport.rs  utils.rs
cat-agent/src/evasion/: mod.rs  patch.rs  ppid.rs
cat-agent/src/io/: mod.rs  win_pipe.rs
cat-agent/src/protocol/: envelope.rs
cat-agent/src/srdi/: mod.rs  pe_parser.rs
cat-agent/src/tasks/: assembly.rs  inject.rs  lateral.rs  mod.rs
cat-agent/src/transport/: mod.rs  pipe.rs
cat-agent/src/tunnel/: socks5.rs
cat-cli/: Cargo.toml
cat-cli/src/: build.rs  commands.rs  display.rs  http.rs  main.rs  output.rs  types.rs
cat-cli/src/commands/: agent.rs  assembly.rs  bof.rs  build.rs  inject.rs  listener.rs  mod.rs  recon.rs  socks.rs  task.rs  transfer.rs
cat-server/: .env  Cargo.toml
cat-server/migrations/: 0002_init.sql  0003_init.sql  0004_init.sql  0005_init.sql  0006_audit.sql  0007_drop_token_b64.sql
cat-server/src/: db.rs  error.rs  handlers.rs  listener_mgr.rs  main.rs  middleware.rs  routes.rs  service.rs  state.rs  tls.rs  validation.rs
cloakcat-protocol/: Cargo.toml
cloakcat-protocol/src/: constants.rs  crypto.rs  kdf.rs  lib.rs  paths.rs  types.rs
docs/: architecture.md
infra/init/: 001_schema.sql
infra/pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841  (+1 more)
infra/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
infra/pgdata/pg_stat/: pgstat.stat
(+56 files in other folders)
