[package]
name = "catctl"
version = "0.1.0"
edition = "2024"

[dependencies]
cloakcat-protocol = { path = "../cloakcat-protocol" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rustyline = "17.0.2"
shell-words = "1"
ctrlc = "3"
uuid = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"
urlencoding = "2"